--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
     <div>
         <button id="btn4" class="buttons" onclick="solution(3)">Option 4</button>
     </div>
+
+    <div>
+        <p id="result"></p>
+    </div>
     
     <script src="quiz.js"></script>
 </body>
