--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p id="score" class="text-align">Score:</p>
 
     <div>
-        <button id="btnStart" class="buttons" onclick="newVoc()">Start Game</button>
+        <button id="btnStart" class="buttons" onclick="loadNewVoc()">Start Game</button>
     </div>    
 
     <div>
@@ -43,6 +43,6 @@
         <p id="result"></p>
     </div>
     
-    <script src="quiz.js"></script>
+    <script src="quizRefactored.js"></script>
 </body>
 </html>
